# api/app/Http/Schemas/TasksSchemas.php
@@ -10,9 +10,9 @@ class TasksSchemas{}
  *      type="object",
  *      @OA\Property(property="id", type="integer"),
  *      @OA\Property(property="creator", type="object", ref="#/components/schemas/UserResponse"),
- *      @OA\Property(property="addressee", type="object", ref="#/components/schemas/UserResponse"),
+ *      @OA\Property(property="responsible", type="object", ref="#/components/schemas/UserResponse"),
  *      @OA\Property(property="content", type="string"),
- *      @OA\Property(property="status", type="string"),
+ *      @OA\Property(property="finished", type="boolean"),
  * )
  */
 class TasksResponse{}
@@ -22,9 +22,9 @@ class TasksResponse{}
  *      schema="TasksRequest",
  *      type="object",
  *      @OA\Property(property="creator", type="integer"),
- *      @OA\Property(property="addressee", type="integer"),
+ *      @OA\Property(property="responsible", type="integer"),
  *      @OA\Property(property="content", type="string"),
- *      @OA\Property(property="status", type="string"),
+ *      @OA\Property(property="finished", type="boolean"),
  * )
  */
 class TasksRequest{}
